Несколько типов литературы у одной темы, а также удаление нескольких полей ключевых n-грамм.